FEAT: finaliza migrações, atualiza server.js e app.js e adiciona preview nas views

--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -3,27 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= pageTitle %></title>  
-  <style>
-    <%- include('../css/style.css'); %>
-  </style>
+  <title><%= pageTitle || 'FinanceU' %></title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <!-- Inclui o cabeçalho como um partial -->
-  <%- include('../components/header') %>
+  <%- include('../partials/header') %>
 
   <main>
     <!-- Renderiza o conteúdo da página específica -->
-    <%- include(content) %>
+    <%- body %>
   </main>
 
-  <footer>
-    <!-- Rodapé comum aqui -->
-    <p>Rodapé da Aplicação</p>
-  </footer>
+  <%- include('../partials/footer') %>
 
   <!-- Adicione scripts JS se necessário -->
   <script src="/js/script.js"></script>
-  
 </body>
 </html>
