--- a/views/pages/to_do_list_items.ejs
+++ b/views/pages/to_do_list_items.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Tarefas | FinanceU</title>
+  <title>Tarefas</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
