--- a/views/pages/expenses.ejs
+++ b/views/pages/expenses.ejs
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Despesas | FinanceU</title>
+  <title>Despesas</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
