FEAT: adiciona cadastro, login e proteção de rotas

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,8 @@
       <a href="/earnings">💰 Ganhos</a> |
       <a href="/expenses">💸 Despesas</a> |
       <a href="/goals">🎯 Metas</a> |
-      <a href="/to_do_list_items">📝 Tarefas</a>
+      <a href="/to_do_list_items">📝 Tarefas</a> |
+      <a href="/profile">👤 Meu Perfil</a> |
+      <a href="/logout">Sair</a>
     </nav>
 </header>
