--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
 <!-- Rodapé fixo -->
 <footer>
-    <p>&copy; 2025 - Projeto Educacional com Node.js</p>
+    <p> 2025 &copy; <a style="color: white;" href="https://github.com/anneestherlf">Anne</a></p>
   </footer>
