--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
       <a href="/earnings">💰 Ganhos</a> |
       <a href="/expenses">💸 Despesas</a> |
       <a href="/goals">🎯 Metas</a> |
-      <a href="/to_do_list_items">📝 Tarefas</a> |
+      <a href="/to-do-list-items">📝 Tarefas</a> |
       <a href="/profile">👤 Meu Perfil</a> |
       <a href="/logout">Sair</a>
     </nav>
