FEAT: adiciona favicon.ico e inicia estilização da view login

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /*
-  style.css - Estilos principais do FinanceU
+  style.css - Estilos principais 
   Este arquivo define o visual global do site, incluindo layout, cores, tipografia e componentes comuns.
 */
 
