--- a/views/pages/to_do_list_items.ejs
+++ b/views/pages/to_do_list_items.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Tarefas</title>
   <link rel="stylesheet" href="/css/style.css">
+  
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <%- include('../partials/header') %>  <main class="container">
