--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= pageTitle || 'FinanceU' %></title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
+
+  
 </head>
 <body>
   <!-- Inclui o cabeçalho como um partial -->
