--- a/views/pages/goals.ejs
+++ b/views/pages/goals.ejs
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Metas</title>
   <link rel="stylesheet" href="/css/style.css">
+  
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <%- include('../partials/header') %>
