--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,6 +5,8 @@
   <title>Dashboard</title>
   <link rel="stylesheet" href="/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <%- include('../partials/header') %>
