--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,23 +1,49 @@
 <!-- Tela de Login -->
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style-login.css">
+
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
-  <main class="container">
-    <h1>Login</h1>
-    <form method="POST" action="/login">
-      <input type="email" name="email" placeholder="E-mail" required>
-      <input type="password" name="password" placeholder="Senha" required>
-      <button type="submit">Entrar</button>
-    </form>
-    <p>Não tem conta? <a href="/register">Cadastre-se</a></p>
-    <% if (error) { %>
-      <div class="error"><%= error %></div>
-    <% } %>
+  <div class="photo-side">
+    <img src="/assets/feliz-page-login.png" alt="" srcset="">
+  </div>
+  <div class="login-side">
+    <main class="container">
+      <div class="title">
+        <h1>Geri</h1>
+        <h2>Gestão financeira para universitários</h2>
+      </div>
+      <form method="POST" action="/login">
+        <div class="input-login">
+          <p>E-mail</p>
+          <input type="email" name="email" placeholder="E-mail" required>
+        </div>
+        <div class="input-login">
+          <p>Senha</p>
+          <input type="password" name="password" placeholder="Senha" required>
+        </div>
+        <button type="submit">Entrar</button>
+      </form>
+      <div class="create-account">
+        <p>Novo(a) por aqui? <a href="/register">Criar conta</a></p>
+        <% if (error) { %>
+          <div class="error">
+            <%= error %>
+          </div>
+          <% } %>
+      </div>
+      <a class="license" href="https://github.com/anneestherlf/projeto-individual-M2-inteli" target="_blank">Feito por
+        Anne Esther © MIT
+        License 2025</a>
+  </div>
   </main>
 </body>
+
 </html>
