--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Meu Perfil</title>
   <link rel="stylesheet" href="/css/style.css">
+  
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <%- include('../partials/header') %>
