--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Cadastro | FinanceU</title>
   <link rel="stylesheet" href="/css/style.css">
+  
+  <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <main class="container">
