FEAT: estiliza view login e register

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Geri | Login</title>
   <link rel="stylesheet" href="/css/style-login.css">
 
   <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
@@ -32,7 +32,8 @@
         <button type="submit">Entrar</button>
       </form>
       <div class="create-account">
-        <p>Novo(a) por aqui? <a href="/register">Criar conta</a></p>
+        <p>Novo(a) por aqui?</p>
+        <a href="/register">Criar conta</a>
         <% if (error) { %>
           <div class="error">
             <%= error %>
